--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "canvas": "^3.1.0",
     "cliprxyz": "^1.0.5",
     "dotenv": "^16.4.7",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "puppeteer": "14.4.1",
     "puppeteer-extra": "^3.3.6",
